# swatctl

./: README.md  pyproject.toml  spec.md
.github/workflows/: ci.yml
swatctl/: __init__.py  cli.py  core.py  gitutils.py
tests/: conftest.py  test_core.py  test_utils.py
